content was updated

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -2,8 +2,8 @@ $blue: #4990c8;
 $lightBlue: #b6dff5;
 $gray: #4a5963;
 
-$text: 'Raleway', sans-serif;
-$title: 'Righteous', cursive;
+$text: 'Open Sans', sans-serif;
+$title: 'Lora', serif;
 
 @mixin font ($size, $name, $color){
   font-size: $size;
