--- a/source/style/common/services_content.scss
+++ b/source/style/common/services_content.scss
@@ -2,78 +2,99 @@
   @include font(48px, $title, $gray);
   padding: 40px 0;
   text-align: center;
+  opacity: 0;
+  transition: 1.5s;
 }
 .services__main-desc{
-  margin-bottom: 40px;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
 .services__main-section-text{
   @include font(20px, $text, $gray);
   padding: 5px 15px;
+  line-height: 32px;
 }
-.services__first-list, .services__second-list{
-  border: 1px solid $blue;
-  padding: 10px 20px;
-  width: 250px;
-  margin: 10px 0 30px 60%;
+.services__hilight-list{
+   @include flex(row, center, center);
+  flex-wrap: wrap;
+ }
+.services__hilight-list-item {
+  padding: 20px;
+  @include font(28px, $title, $blue);
 }
-.services__second-list{
-  margin: 10px 0 30px 5%;
-  width: 350px;
-}
-.services__list-item{
-  padding: 5px 0;
-  @include font(24px, $title, $blue);
-}
+//------------------------------------------------   tabs
 
-
-
-
-
-
-//----------------------------------------------------   accordion
-.services-content__list-item{
+.services__tabs-container{
   position: relative;
 }
-.services__content-wrap{
-  overflow: hidden;
-  max-height: 0;
-  transition-duration: .3s;
+.services__tabs-list{
+  @include flex(row, center, center);
 }
-.content__active{
-  max-height: 100%;
-}
-.services__item-title-wrap{
+.services__tabs-item{
+  width: 33%;
   cursor: pointer;
-  @include flex(row, start, center);
-  padding: 10px 20px;
-  margin-bottom: 5px;
-  transition: .3s;
-&:hover{
-      opacity: .7;
+  text-align: center;
+  @include font(32px, $title, $gray);
+  &:hover{
+    background: #edeeef;
   }
 }
-.services__item-title{
-  transition: .3s;
-  @include font(32px, $title, $gray);
+.services__tabs-title{
+  padding: 20px 0;
 }
-.title__active{
-  @include font(32px, $title, $blue);
+.tabs__title-active{
+  border-top: 2px solid $blue;
+  border-right: 2px solid $blue;
+  border-left: 2px solid $blue;
+  background: #edeeef;
+}
+.services__tabs-cont-list{
+   position: relative;
+   min-height: 650px;
+   background: #edeeef;
+   padding: 10px;
+ }
+
+.services__tabs-cont-item{
+  position: absolute;
+  display: none;
 }
 
-.services__item-title-arrow{
-  transition: .3s;
-  margin-left: 40px;
-  background-image: url("/assets/img/icons/arrow_down.png");
-  background-size: cover;
-  width: 40px;
-  height: 30px;
+.content__item-active{
+  display: block;
 }
-.arrow__active{
-  background-image: url("/assets/img/icons/arrow_up-b.png");
+//------------------------------------------- SS
+.ss__picter-wrap{
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin: 20px;
+}
+.ss__pic{
+  width: 100%;
+  height: 100%;
+}
+.ss__inner-list-item{
+  @include font(18px, $text, $gray);
+  padding: 5px 0;
+  line-height: 26px;
+}
+.ss__text{
+  @include font(20px, $text, $gray);
+  padding: 30px;
+  line-height: 32px;
+}
+.ss__text-inner-list-wrap{
+  padding: 10px;
+  width: 70%;
+  border: 1px dotted $gray;
+  margin: 0 auto;
 }
 .cremation__content{
   padding: 10px 15px;
   @include font(20px, $text, $gray);
+  line-height: 32px;
 }
 
 .gen-price__desc{
@@ -93,9 +114,6 @@
   display: none;
   padding: 5px;
 }
-.price-list__price-wrap{
-  @include flex(row, flex-start, center);
-}
 .price-list__price--s{
   padding-left: 15px;
   font-weight: bold;
@@ -107,9 +125,6 @@
   border-bottom: 1px solid #ccc;
 }
 //----------------------------------------------------------------------------------------------------------------------
-
-
-
 
 .price-list__names, .price-list__price, .price-list__desc{
   padding: 20px 0;
@@ -129,28 +144,6 @@
   @include font(18px, $text, #AE1008);
   font-weight: bold;
 }
-.ss__picter-wrap{
-  width: 200px;
-  height: 200px;
-  float: left;
-  margin: 20px;
-}
-.ss__pic{
-  width: 100%;
-  height: 100%;
-}
 
-.ss__text{
-  @include font(20px, $text, $gray);
-  padding: 30px;
-}
-.ss__text-inner-list-wrap{
-  padding: 50px;
-  width: 70%;
-  border: 1px dotted $gray;
-  margin: 0 auto;
-}
-.ss__inner-list-item{
-  @include font(20px, $text, $gray);
-  padding: 10px 0;
-}
+
+
