--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -13,16 +13,17 @@ html
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <meta content="ie=edge" http-equiv="x-ua-compatible">
 
-        link(href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet")
         link(rel="shortcut icon" href="assets/img/icons/favicon.png")
         link(href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet")
         link(rel="shortcut icon" href="assets/img/icons/favicon.png")
         link(rel='stylesheet' href='/assets/css/foundation.css')
         link(rel='stylesheet' href='/assets/css/app.css')
-        script(src=`${main_js}` defer)
+        script(src='/assets/js/anime.min.js')
         script(src=`${jsfileName}` defer)
+        script(src=`${map}` defer)
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
