--- a/source/template/common/about_content.pug
+++ b/source/template/common/about_content.pug
@@ -3,7 +3,7 @@ section.about__content
         .about__top-desc
             .about__title About us
             .about__title-desc
-                p.about__title-desc-p Our caring and experienced professionals are here to support you. We offer a range of personalized services to suit your family’s wishes and requirements, and whether it is a traditional funeral or direct cremation, you can count on us to help  you plan a personal, lasting tribute to your loved one. We will carefully guide you through the Please feel free to call us at any time of the day, any day of the week, for immediate assistance. Or, visit our funeral home in person at your convenience. We also provide a wealth of information here on our web site so you can learn more from the privacy of your own home
+                .about__title-desc-p Let us give you peace fo mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
         .about__slider-small_device
             ul.about__slider-small_device--list
                 li.about__slider-small_device--item.active-slide
@@ -32,10 +32,9 @@ section.about__content
                 .about__employee-persinfo-position owner
                 .about__employee-persinfo-desc
                     p.
-                        some description some descri ptionsome description some description some description some
-                        descri ptionsome description some description some description some descri ptionsome
-                        description some description some description some descri ptionsome description some description
-                        some description some descri ptionsome description some description
+                        Mila began her career in the funeral home business after the loss of her brother in 2003. Her family had
+                        an unpleasant experience with the funeral home provider and she was inspired to open "Piece fo Heaven", since
+                        it's inception, she has helped more than a thousand families plan a lasting tribute for their loved once.
         .about__bg-slider.about__bg-slider--lobby
         .about__employee
             .about__employee-persinfo
@@ -46,10 +45,8 @@ section.about__content
                 .about__employee-persinfo-position funeral director
                 .about__employee-persinfo-desc
                     p.
-                        some description some descri ptionsome description some description some description some
-                        descri ptionsome description some description some description some descri ptionsome
-                        description some description some description some descri ptionsome description some description
-                        some description some descri ptionsome description some description
+                        Andray, Mila's nephew joined "Piece of Heaven" in 2015 from New York. As a funeral director he enjoys every aspect of funeral
+                        planning and working with families to provide exceptional service. He is a detail-oriented family man with a beautiful wife and daughter
         .about__bg-slider.about__bg-slider--limo
         .about__employee
             .about__employee-persinfo
@@ -57,12 +54,11 @@ section.about__content
                     img.about__employee-pic(src="/assets/img/anatolii.jpg" alt="piece of heaven employee" title="Andrey Kostka")
                 .about__employee-persinfo-name Anatolii
                 .about__employee-persinfo-lastname Tupkalo
-                .about__employee-persinfo-position funeral director
+                .about__employee-persinfo-position Manager
                 .about__employee-persinfo-desc
                     p.
-                        some description some descri ptionsome description some description some description some
-                        descri ptionsome description some description some description some descri ptionsome
-                        description some description some description some descri ptionsome description some description
-                        some description some descri ptionsome description some description
+                        Anatolii, hails from Ukraine and is a specialist in Monument/Memorial construction and design. His behind the scenes support makes
+                        "Piece fo Heaven" operations run smoothly and efficiently. Since he joined out home in 2018, families have remarked that his care compassion and attantion to detail
+                        made a different.
 
 
