--- a/source/template/common/contacts_content.pug
+++ b/source/template/common/contacts_content.pug
@@ -1,11 +1,5 @@
+article.conatcs__content
 .contacts__title Contacts
-ul.contact__list
-    li.contact__list-item 303-369-9500
-    li.contact__list-item 303-369-8382 (fax)
-    li.contact__list-item 10200 E Mississippi Ave, Denver CO, 80247
-    li.contact__list-item pieceofheavendenver@yahoo.com
-.map__over-line please feel free to call us day or night
-.map__display#map
 .form__wrap#contact-form
     .contact-form__title  get in touch
     .contact__form-alert
@@ -16,5 +10,13 @@ ul.contact__list
             input.contact-form__input(type="mail" placeholder="email" name="email")
             textarea.contact-form__message(placeholder="text" name="message")
             input.contact-from__button(type="button" value="submit" name="button")
+ul.contact__list
+    li.contact__list-item 303-369-9500
+    li.contact__list-item 303-369-8382 (fax)
+    li.contact__list-item 10200 E Mississippi Ave, Denver CO, 80247
+    li.contact__list-item pieceofheavendenver@yahoo.com
+.map__over-line please feel free to call us day or night
+.map__display#map
+
 
 
