--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -1,9 +1,24 @@
 section.home_obits
     .home__main-desc
-        h3.home__main-title     affordable cremation
-        h3.home__second-title    burial packages
-    .obits__title Resent obituaries
+        h3.home__main-title    Piece fo Heaven is a family owned and operated Funeral home since 2003
+        .home__direct-links-wrap
+            a.home__direct-link(href="/services.html") what we offer
+            a.home__direct-link(href="/pre_planning.html") go to pre-plan
+            a.home__direct-link(href="/contacts.html") get in touch
+        h3.home__main-title  Contact us today if you have experienced a loss we put your mind in peace.
+    include ../common/under_menu
+    .obits__home-title Recent obituaries
     .direction__arrow-wrap
+        .direction__arrow
+            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
+        .direction__arrow
+            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
+        .direction__arrow
+            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
+        .direction__arrow
+            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
+        .direction__arrow
+            img(src="/assets/img/icons/direct_arrow.png" alt="funeral obituaries direction arrow").arrow__pic
         .direction__arrow
     .home-page__obits-arrow-left
         img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
