--- a/source/template/common/main_header.pug
+++ b/source/template/common/main_header.pug
@@ -3,8 +3,8 @@ header.main_header
         .main_header__bg
             picture
                 source(srcset="/assets/img/header_bg_xxl.jpg" media="(min-width: 1500px)")
-                source(srcset="/assets/img/header_bg.jpg" media="(min-width: 1200px)")
-                source(srcset="/assets/img/header_bg-m.jpg" media="(min-width: 920px)")
+                source(srcset="/assets/img/header_bg_xxl.jpg" media="(min-width: 1200px)")
+                source(srcset="/assets/img/header_bg-l.jpg" media="(min-width: 920px)")
                 source(srcset="/assets/img/header_bg-s.jpg" media="(min-width: 768px)")
                 img.main_header__bg-pic(src="assets/img/header_bg-xs.jpg" alt="heaven")
         .top_line
@@ -24,7 +24,7 @@ header.main_header
                     img.main_header__title-pic(src="assets/img/main-title.png" alt="funeral home logo" title="funeral and cremation services")
             h1.main_header__title-maindesc Funeral home
             h2.main_header__title-secdesc funeral and cremation services
-            .main_header__title-slogan Call us and we take care of all your difficulties
+            .main_header__title-slogan Call us and we will take care of all your difficulties
 
 
 
