--- a/source/template/pages/admin.pug
+++ b/source/template/pages/admin.pug
@@ -1,9 +1,9 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/admin'
-    - var main_js = '/assets/js/admin.js'
-    - var main_js = '/assets/js/admin.js'
+    - var title = 'funeral home/admin';
+    - var map = '';
+    - var jsfileName = 'assets/js/admin.js';
 
 block content
     .admin__header
