--- a/source/template/pages/contacts.pug
+++ b/source/template/pages/contacts.pug
@@ -2,8 +2,8 @@ extends ../_template
 
 block variables
     - var title = 'funeral home/contacts'
-    - var jsfileName = '/assets/js/contacts.js'
-    - var main_js = '/assets/js/app.js'
+    - var jsfileName = '/assets/js/contacts.js';
+    - var map = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyBteYC9sMR6OiooedxOXZn_ryBN6hOJJ-0&callback=initMap';
 block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
@@ -11,7 +11,6 @@ block content
     include ../common/header
     .main-container
         include ../common/menu
-        include ../common/under_menu
         include ../common/contacts_content
     include ../common/footer
 
