--- a/source/style/common/contacts_content.scss
+++ b/source/style/common/contacts_content.scss
@@ -1,7 +1,9 @@
 .contacts__title{
   @include font(42px, $title, $gray);
   text-align: center;
-  padding-top: 30px;
+  padding: 30px 0;
+  opacity: 0;
+  transition: 1.5s;
 }
 .contact__list{
   display: block;
