--- a/source/style/common/home_content.scss
+++ b/source/style/common/home_content.scss
@@ -2,34 +2,60 @@
   position: relative;
 }
 .home__main-desc{
-  min-height: 400px;
-  background-image: url("/assets/img/bg.png");
-  background-size: cover;
+  padding: 75px 0;
+  box-sizing: border-box;
+  width: 70%;
+  margin: 0 auto;
 }
-.home__main-title, .home__second-title{
+.home__main-title{
+  opacity: .1;
+  transition: 2s;
   text-align: center;
-  @include font(32px, $title, $gray);
+  @include font(42px, $title, $gray);
+  line-height: 70px;
+}
+.home__direct-links-wrap{
+  padding: 75px 0;
+  margin: 0 auto;
+  @include flex(row, center, center);
+}
+.home__direct-link{
+  cursor: pointer;
+  @include font(26px, $text, $blue);
+  padding: 7px 20px;
+  background: transparent;
+  border: 1px solid $blue;
+  margin-left: 10px;
+  &:hover{
+    background: $blue;
+    color: #fff;
+    box-shadow: 0px 0px 6px 4px rgba(0, 0, 255, .2);
+  }
 }
 .obits__title{
   @include font(48px, $title, $gray);
   padding-top: 55px;
   text-align: center;
+  opacity: 0;
+  transition: 1s;
 }
 .direction__arrow-wrap{
   position: relative;
-  padding: 10px 0 10px 0;
-  height: 40px;
+  @include flex(row, center, center);
 }
 .direction__arrow{
-  position: absolute;
-  left: 50%;
-  margin-right: -30px;
-  width: 60px;
-  height: 40px;
-  background-image: url("/assets/img/icons/dirct_arrow_b.png");
-  background-size: cover;
+  width: 20px;
+  height: 20px;
 }
-
+.arrow__pic{
+  width: 100%;
+  height: 100%;
+}
+.obits__home-title{
+  @include font(32px, $title, $gray);
+  text-align: center;
+  padding: 20px;
+}
 .home-obits__list-wrap{
   width: 96%;
   min-height: 600px;
