--- a/source/style/common/preplan_content.scss
+++ b/source/style/common/preplan_content.scss
@@ -1,9 +1,12 @@
 .preplan__title{
   @include font(42px, $title, $gray);
   text-align: center;
-  padding-top: 30px;
+  padding: 30px 0;
+  opacity: 0;
+  transition: 1.5s;
 }
 .preplan__content{
   @include font(20px, $text, $gray);
-  padding: 20px;
+  line-height: 32px;
+  padding: 10px;
 }
