--- a/source/template/common/menu.pug
+++ b/source/template/common/menu.pug
@@ -1,5 +1,5 @@
 
-section.menu
+menu.menu
     ul.menu__list
         -
             var menuData = [
@@ -14,6 +14,6 @@ section.menu
             ]
 
         each item in menuData
-            li.menu-item.menu
+            li.menu-item
                 a(href=`${item[1]}` data-pagename=`${item[2]}`).menu__link #{item[0]}
 
