--- a/source/template/pages/feedbacks.pug
+++ b/source/template/pages/feedbacks.pug
@@ -1,9 +1,9 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/feedbacks'
-    - var jsfileName = '/assets/js/feedbacks.js'
-    - var main_js = '/assets/js/app.js'
+    - var title = 'funeral home/feedbacks';
+    - var jsfileName = '/assets/js/feedbacks.js';
+    - var map = '';
 block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
