--- a/source/template/pages/pre-planning.pug
+++ b/source/template/pages/pre-planning.pug
@@ -1,9 +1,9 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/pre-planning'
-    - var jsfileName = '/assets/js/pre-planning.js'
-    - var main_js = '/assets/js/app.js'
+    - var title = 'funeral home/pre-planning';
+    - var jsfileName = '/assets/js/pre-planning.js';
+    - var map = '';
 block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
@@ -11,7 +11,6 @@ block content
     include ../common/header
     .main-container
         include ../common/menu
-        include ../common/under_menu
         include ../common/preplan_content
     include ../common/footer
 
