page titles were updated

--- a/source/style/common/768.scss
+++ b/source/style/common/768.scss
@@ -193,6 +193,7 @@
 
   .feedbacks__content-title{
     font-size: 36px;
+    padding: 40px 10px;
   }
   .feedbacks__form-title{
     font-size: 24px;
