--- a/source/template/common/feedbacks_content.pug
+++ b/source/template/common/feedbacks_content.pug
@@ -1,5 +1,5 @@
 .feedbacks__content-wrap
-    .feedbacks__content-title what people say about us
+    .feedbacks__content-title What people say about us
     .feedback__content-box
         .feedbacks__content-item
             .feedbacks__item-name Name
