--- a/source/template/common/services_content.pug
+++ b/source/template/common/services_content.pug
@@ -35,7 +35,7 @@ section.services__content
                 .services__tabs-title SS service
         ul.services__tabs-cont-list
             li.services__tabs-cont-item.content__item-active
-                .services__tabs-contant
+                .services__tabs-content
                     .cremation__content
                         p.
                             Cremation is chosen by many families and individuals as an affordable alternative to traditional burial.
@@ -50,7 +50,7 @@ section.services__content
                             Additional services for Direct Cremation (optional): viewing, memorial service in our
                             beautiful Chapel, casketing and cosmetics, catered reception and service folders, etc.
             li.services__tabs-cont-item
-                .services__tabs-contant
+                .services__tabs-content
                     .gen-price__content
                         .gen-price__desc
                             p for the complete price list of our services and merchandises please call us 720-862-8865 or use
@@ -106,7 +106,7 @@ section.services__content
                                 .price-list__desc--s #{item[2]}
                         .gen-price_-worrning !!! these prices are subject to change
             li.services__tabs-cont-item
-                .services__tabs-contant
+                .services__tabs-content
                     .services__content-wrap
                         .ss__picter-wrap
                             img(src="/assets/img/SSI_logo.png").ss__pic
@@ -133,117 +133,7 @@ section.services__content
                                 is a valuable resource for information about all of Social Security's
                                 programs. There are a number of things you can do online. In addition to using the
                                 Social Security website, you can call them toll-free at 1-800-772-1213.
-    //ul.services__list
-    //    li.services-content__list-item
-    //        .services__item-title-wrap
-    //            h2.services__item-title Cremation
-    //            .services__item-title-arrow
-    //        .services__content-wrap
-    //            .cremation__content
-    //                p.
-    //                    Cremation is chosen by many families and individuals as an altemative to traditional burial.
-    //                    However, cremation often follows a traditional funeral service. It is selected for many reasons
-    //                    ranging from religious beliefs or ethnic customs to cost. There are a variety of options for
-    //                    the final disposition of cremated remains. Urns or other containers may be placed in a niche
-    //                    at a columbarium, a structure or room designed to contain cremated remains.
-    //                p.
-    //                    Families may elect to bury the urn in a family plot or cemetery or keep it in another
-    //                    place of personal significance, such as the home. It is helpful to consider all the options and
-    //                    take the time to ask questions before making a final decision about such an important event.
-    //                    One of our licensed funeral directors will help answer any question you may have.
-    //                    Making an informed choice can help assure peace of mind for everyone involved
-    //    li.services-content__list-item.services__active
-    //        .services__item-title-wrap
-    //            h4.services__item-title Some of our prices
-    //            .services__item-title-arrow
-    //        .services__content-wrap
-    //            .gen-price__content
-    //                .gen-price__desc
-    //                    p for the complete price list of our services and merchandises please call us 720-862-8865 or use
-    //                    a(href="/contacts.html")  form request
-    //                    p to have one provided
-    //                .price-list
-    //                    .price-list__names
-    //                        p Body removal:
-    //                        p Caskets:
-    //                        p Urns:
-    //                        p Casketing and cosmetics:
-    //                        p Embalming:
-    //                        p Chapel:
-    //                        p Funeral director & staff:
-    //                        p Hearsing:
-    //                        p Rental casket and attributes:
-    //                    .price-list__price
-    //                        p $195
-    //                        p $1200 and up
-    //                        p $65 and up
-    //                        p $495
-    //                        p $895
-    //                        p $400
-    //                        p $210
-    //                        p $225
-    //                        p $595
-    //                    .price-list__desc
-    //                        p (inside of 30ml around area, if weight of body is not over that 300lb)
-    //                        p (compete prise list can be provided)
-    //                        p (compete prise list can be provided)
-    //                        p -
-    //                        p (in case of autopsy plus $200)
-    //                        p (renting chapel on weekend and holidays or over work time plus $300)
-    //                        p -
-    //                        p -
-    //                        p -
-    //                .price-list--s
-    //                    -
-    //                        var priceList = [
-    //                        ['Body removal -', '$195', '(inside of 30ml around area, if weight of body is not over that 300lb)'],
-    //                        ['Caskets - ', '$1200 and up', '(compete prise list can be provided)'],
-    //                        ['Urns - ', '$65 and up', '(compete prise list can be provided)'],
-    //                        ['Casketing and cosmetics - ', '$495', ''],
-    //                        ['Embalming - ', '$895', '(in case of autopsy plus $200)'],
-    //                        ['Chapel - ', '$400', '(renting chapel on weekend and holidays or over work time plus $300)'],
-    //                        ['Funeral director & staff - ', '$210', ''],
-    //                        ['Hearsing - ', '$225', ''],
-    //                        ['Rental casket and attributes - ', '$595', '']
-    //                        ];
-    //                    each item in priceList
-    //                        .price-list__price-wrap
-    //                            .price-list__name--s #{item[0]}
-    //                            .price-list__price--s #{item[1]}
-    //                        .price-list__desc--s #{item[2]}
-    //                .gen-price_-worrning !!! these prices are subject to change
-    //
-    //    li.services-content__list-item.services__active
-    //        .services__item-title-wrap
-    //            h3.services__item-title Social Security services
-    //            .services__item-title-arrow
-    //        .services__content-wrap
-    //            .ss__picter-wrap
-    //                img(src="/assets/img/SSI_logo.png").ss__pic
-    //            .ss__text
-    //                p.
-    //                    Some of the deceased's family members may be able to receive
-    //                    Social Security benefits if the deceased person worked long enough
-    //                    under Social Security to qualify for benefits.  You should
-    //                    contact Social Security as soon as you can to make sure the family receives
-    //                    all of the benefits to which it may be entitled, including a one-time payment of $1495 to the surviving spouse.
-    //
-    //            .ss__text-inner-list
-    //                .ss__text-inner-list-wrap
-    //                    -
-    //                        var ssInnerList = [
-    //                        '- A widow or widower age 60 or older (age 50 or older if disabled)',
-    //                        '- A surviving spouse at any age who is caring for the deceased,s child under age 16 or disabled',
-    //                        '- An unmarried child of the deceased who is younger than age 18 (or age 18 or 19 if he or she is a full-time student in an elementary or secondary school); or age 18 or older with a disability that began before age 22',
-    //                        '- Parents, age 62 or older, who were dependent on the deceased for at least half of their support, and a surviving divorced spouse, under certain circumstances'
-    //                        ]
-    //                    each item in ssInnerList
-    //                        .ss__inner-list-item #{item}
-    //            .ss__text
-    //                p.
-    //                    The Social Security website is a valuable resource for information about all of Social Security's
-    //                    programs. There are a number of things you can do online. In addition to using the
-    //                    Social Security website, you can call them toll-free at 1-800-772-1213.
+
 
 
 
