--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/about';
+    - var title = 'Piece fo Heaven funeral home/about';
     - var jsfileName = '/assets/js/about.js';
     - var map = '';
 block content
