--- a/source/template/pages/contacts.pug
+++ b/source/template/pages/contacts.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/contacts'
+    - var title = 'Piece fo Heaven funeral home/contacts'
     - var jsfileName = '/assets/js/contacts.js';
     - var map = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyBteYC9sMR6OiooedxOXZn_ryBN6hOJJ-0&callback=initMap';
 block content
