--- a/source/template/pages/feedbacks.pug
+++ b/source/template/pages/feedbacks.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/feedbacks';
+    - var title = 'Piece fo Heaven funeral home/feedbacks';
     - var jsfileName = '/assets/js/feedbacks.js';
     - var map = '';
 block content
