--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-  - var title = 'funeral home'
+  - var title = 'Piece fo Heaven funeral home'
   - var jsfileName = '/assets/js/index.js';
   - var map = '';
 
