--- a/source/template/pages/obits.pug
+++ b/source/template/pages/obits.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/obits';
+    - var title = 'Piece fo Heaven funeral home/obits';
     - var jsfileName = '/assets/js/obits.js';
     - var map = '';
 block content
