--- a/source/template/pages/pre-planning.pug
+++ b/source/template/pages/pre-planning.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/pre-planning';
+    - var title = 'Piece fo Heaven funeral home/pre-planning';
     - var jsfileName = '/assets/js/pre-planning.js';
     - var map = '';
 block content
