--- a/source/template/pages/services.pug
+++ b/source/template/pages/services.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-    - var title = 'funeral home/services';
+    - var title = 'Piece fo Heaven funeral home/services';
     - var jsfileName = '/assets/js/services.js';
     - var map = '';
 block content
